# Mono.Nat

./: .gitignore  AUTHORS  AssemblyInfo.cs  Directory.Build.props  INSTALL  INatDevice.cs  LICENSE.md  Makefile  Makefile.include  Mapping.cs  MappingException.cs  Mono.Nat.sln  Mono.Nat.snk  NatController.cs  NatDevice.cs  README.md  UPnPNatDevice.cs  UpnpNatDevice.cs  autogen.sh  configure.ac  uPnP.csproj
AsyncResults/: GetAllMappingsAsyncResult.cs  PortMapAsyncResult.cs
Enums/: MapState.cs  ProtocolType.cs
EventArgs/: DeviceEventArgs.cs
Examples/: AssemblyInfo.cs  Program.cs  TestClient.csproj
Messages/: ExternalIPAddressMessage.cs  IMessage.cs
Messages/uPnPMessages/: AddMappingResponseMessage.cs  CreatePortMappingMessage.cs  DeletePortMappingMessage.cs  DeletePortMappingResponseMessage.cs  DiscoverDeviceMessage.cs  ErrorMessage.cs  ExternalIPAddressMessage.cs  GetExternalIPAddressMessage.cs  GetServicesMessage.cs  Message.cs  UpnpMessage.cs
Mono.Nat/: AbstractNatDevice.cs  AssemblyInfo.cs  AsyncExtensions.cs  IMapper.cs  INatDevice.cs  ISearcher.cs  Makefile.am  Mapping.cs  Mono.Nat.csproj  Mono.Nat.nuspec  NatDevice.cs  NatDeviceExtensions.cs  NatUtility.cs  PmpSearcher.cs  Searcher.cs  SemaphoreSlimExtensions.cs  SocketGroup.cs  UpnpSearcher.cs  packages.config
Mono.Nat.Android/: Mono.Nat.Android.csproj
Mono.Nat.Android/Resources/: Resource.Designer.cs
Mono.Nat.Console/: Main.cs  Mono.Nat.Console.csproj
Mono.Nat.Test/: AssemblyInfo.cs  Main.cs  Makefile.am  Mono.Nat.Test.csproj
Mono.Nat/AsyncResults/: AsyncResult.cs  TaskAsyncResult.cs
Mono.Nat/Enums/: MapState.cs  ProtocolType.cs
Mono.Nat/EventArgs/: DeviceEventArgs.cs
Mono.Nat/Exceptions/: MappingException.cs
Mono.Nat/Logging/: Logger.cs
Mono.Nat/Pmp/: Pmp.cs  PmpConstants.cs  PmpNatDevice.cs
Mono.Nat/Upnp/: Upnp.cs  UpnpNatDevice.cs
scripts/: Mono.Nat.dll.template.nuspec  deployment.ps1
src/: .gitignore  Makefile.am  Makefile.include  Mono.Nat.mds  Mono.Nat.sln  autogen.sh  configure.ac
src/Mono.Nat/: AbstractNatController.cs  AbstractNatDevice.cs  AssemblyInfo.cs  INatController.cs  INatDevice.cs  ISearcher.cs  Makefile.am  Mapping.cs  Mono.Nat.csproj  Mono.Nat.mdp  NatUtility.cs  PmpSearcher.cs  TimerUtility.cs  UpnpSearcher.cs  mono-nat.pc  mono-nat.pc.in  mono.nat.pc.in
src/Mono.Nat.Test/: Main.cs  Mono.Nat.Test.csproj  Mono.Nat.Test.mdp  mono.nat.test.in
src/Mono.Nat/AsyncResults/: AbstractPortMapAsyncResult.cs
src/Mono.Nat/Exceptions/: MappingException.cs
src/Mono.Nat/Pmp/: PmpConstants.cs  PmpNatController.cs  PmpNatDevice.cs
src/Mono.Nat/Pmp/AsyncResults/: PortMapAsyncResult.cs
src/Mono.Nat/Upnp/: UpnpNatController.cs  UpnpNatDevice.cs
src/Mono.Nat/Upnp/AsyncResults/: PortMapAsyncResult.cs
src/Mono.Nat/Upnp/Messages/: DiscoverDeviceMessage.cs  ErrorMessage.cs  GetServicesMessage.cs  UpnpMessage.cs
src/Mono.Nat/Upnp/Messages/Requests/: CreatePortMappingMessage.cs  DeletePortMappingMessage.cs  GetExternalIPAddressMessage.cs  GetGenericPortMappingEntry.cs  GetSpecificPortMappingEntryMessage.cs
src/Mono.Nat/Upnp/Messages/Responses/: CreatePortMappingResponseMessage.cs  DeletePortMappingResponseMessage.cs  GetExternalIPAddressResponseMessage.cs  GetGenericPortMappingEntryResponseMessage.cs
(+37 files in other folders)
